--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 192, 203;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+
+.bg-rosa {
+  background-color: #FDB0DA; /* Código de cor para rosa */
+}
+
+.fonte-maior {
+  font-size: 1.7rem; /* Tamanho da fonte desejado */
+}
+
